@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/loadDataADAM.R
-\name{loadDataADaM}
-\alias{loadDataADaM}
+\name{loadDataADaMSDTM}
+\alias{loadDataADaMSDTM}
 \title{Load data from ADaM file(s).}
 \usage{
-loadDataADaM(files, convertToDate = FALSE, dateVars = "DTC$",
+loadDataADaMSDTM(files, convertToDate = FALSE, dateVars = "DTC$",
   verbose = TRUE)
 }
 \arguments{
@@ -21,7 +21,9 @@ By default all columns ending with 'DTC' are used (dateVars is: 'DTC$').}
 }
 \value{
 list of data.frame with data of each ADAM file (if not empty),
-with special attributes 'labelVars': named vector with label of the variables
+with special attributes 'labelVars': named vector with label of the variables.
+Each data.frame contains an additional column: 'dataset' specifying the name of the 
+\code{files} it was read from.
 }
 \description{
 This converts also date/time variable to R date/time class 
