@@ -6,6 +6,7 @@
     o subjectProfileSpaghettiPlot
     o getXLimSubjectProfilePlots: fix extraction limits for interval plot
     o add sessionInfo, shiny parameter
+    o rename loadDataADaM by loadDataADaMSDTM
 0.0.3
     o subjectProfileTextPlot: possibility to have multiple paramValueVar in same line, fix ordering
     o subjectProfileTextPlot: paramValueVar can be a function
